--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "react-fundamentals",
   "version": "1.0.0",
-  "description": "",
+  "description": "React Fundamentals",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Alexander Curiel",
   "license": "ISC",
   "dependencies": {
     "react": "^15.3.0",
