--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "react-fundamentals",
   "version": "1.0.0",
   "description": "React Fundamentals",
+  "engineStrict": true,
   "engines": {
     "node": ">=4.0.0"
   },
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "lint": "eslint src"
   },
   "author": "Alexander Curiel",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
@@ -26,7 +28,9 @@
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1",
+    "webpack-browser-plugin": "^1.0.12",
     "webpack-dev-server": "^1.14.1"
   }
 }
