--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "dev": "webpack-dev-server",
     "lint": "eslint src"
   },
