--- a/package.json
+++ b/package.json
@@ -13,6 +13,19 @@
   },
   "author": "Alexander Curiel",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apehead/react-fundamentals.git"
+  },
+  "homepage": "https://github.com/apehead/react-fundamentals",
+  "bugs": {
+    "url": "https://github.com/apehead/react-fundamentals/issues"
+  },
+  "keywords": [
+    "react",
+    "fundamentals",
+    "tutorial"
+  ],
   "dependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
